--- a/pages/signin.html
+++ b/pages/signin.html
@@ -1,102 +1,110 @@
-<div class="row">
-  <div class="col-10 offset-1">
-    <h1 class="my-4">đăng nhập hoặc đăng ký thành viên</h1>
-    <div class="table-group-divider ml-3"></div>
+<div ng-controller="signin">
+  <div class="row">
+    <div class="col-10 offset-1">
+      <h1 class="my-4">đăng nhập hoặc đăng ký thành viên</h1>
+      <div class="table-group-divider ml-3"></div>
+    </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-lg-6 col-sm-12">
-    <div class="col-6 offset-3">
-      <form>
-        <div class="row my-5">
-          <h2>đăng nhập thành viên</h2>
-        </div>
-        <div class="row my-5">
-          <input class="form-control border-0" placeholder="tài khoản" ng-model="account">
-        </div>
-        <div class="row my-5">
-          <input type="password" placeholder="mật khẩu" class="form-control border-0" ng-model="password">
-        </div>
-        <div class="row my-5">
-          <p data-bs-toggle="modal" data-bs-target="#exampleModal">bạn quên mật khẩu?</p>
-          <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-body">
-                  <div class="row">
-                    <div class="col-1 offset-11">
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  <div class="row">
+    <div class="col-lg-6 col-sm-12">
+      <div class="col-6 offset-3">
+        <form>
+          <div class="row my-5">
+            <h2>đăng nhập thành viên</h2>
+          </div>
+          <div class="row my-5">
+            <input class="form-control border-0" placeholder="tài khoản" ng-model="account">
+          </div>
+          <div class="row my-5">
+            <input type="password" placeholder="mật khẩu" class="form-control border-0" ng-model="password">
+          </div>
+          <div class="row my-5">
+            <p data-bs-toggle="modal" data-bs-target="#exampleModal">bạn quên mật khẩu?</p>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col-1 offset-11">
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
                     </div>
-                  </div>
-                  <div class="row">
-                    <h1>Bạn quên mật khẩu?</h1>
-                  </div>
-                  <div class="row">
-                    <div class="col-4 form-check offset-3">
-                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                      <label class="form-check-label" for="flexRadioDefault1">
-                        Số điện thoại
-                      </label>
+                    <div class="row">
+                      <h1>Bạn quên mật khẩu?</h1>
                     </div>
-                    <div class="col-3 form-check">
-                      <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
-                      <label class="form-check-label" for="flexRadioDefault2">
-                        Email
-                      </label>
+                    <div class="row">
+                      <div class="col-4 form-check offset-3">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                        <label class="form-check-label" for="flexRadioDefault1">
+                          Số điện thoại
+                        </label>
+                      </div>
+                      <div class="col-3 form-check">
+                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2"
+                          checked>
+                        <label class="form-check-label" for="flexRadioDefault2">
+                          Email
+                        </label>
+                      </div>
                     </div>
-                  </div>
-                  <div class="row"></div>
-                  <div class="row">
-                    <p> vui lòng nhập sdt để nhận mã xác nhận</p>
-                    <div class="col-9"><input class="form-control" style="height: 50px;" placeholder="001930293" /></div>
-                    <div class="col-3"><button class="bg-success" style="height: 50px;width: 80%;color: aliceblue;">Gửi</button></div>
-                  </div>
-                  <div class="row"></div>
-                  <div class="row">
-                    <p> vui lòng nhập mã xác nhận </p>
-                    <div class="col-9"><input class="form-control" style="height: 50px;" placeholder="001930293" /></div>
-                    <div class="col-3"><button class="bg-success" style="height: 50px; width: 80%;color: aliceblue;">Gửi</button></div>
+                    <div class="row"></div>
+                    <div class="row">
+                      <p> vui lòng nhập sdt để nhận mã xác nhận</p>
+                      <div class="col-9"><input class="form-control" style="height: 50px;" placeholder="001930293" />
+                      </div>
+                      <div class="col-3"><button class="bg-success"
+                          style="height: 50px;width: 80%;color: aliceblue;">Gửi</button></div>
+                    </div>
+                    <div class="row"></div>
+                    <div class="row">
+                      <p> vui lòng nhập mã xác nhận </p>
+                      <div class="col-9"><input class="form-control" style="height: 50px;" placeholder="001930293" />
+                      </div>
+                      <div class="col-3"><button class="bg-success"
+                          style="height: 50px; width: 80%;color: aliceblue;">Gửi</button></div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
 
-        </div>
-        <div class="row my-5">
-          <button style="background: transparent;height: 50px" ng-click="handleSignIn($event)">đăng nhập</button>
-        </div>
-        <div class="row my-5">
-          <h4>đăng nhập nhanh/đăng ký thành viên bằng tài khoản mạng xã hội</h4>
-        </div>
-        <div class="row my-5">
-          <div class="col-4 offset-1">
-            <button class="px-3" style="background: transparent">facebook</button>
           </div>
-          <div class="col-4 offset-1">
-            <button class="px-3" style="background: transparent">google</button>
+          <div class="row my-5">
+            <button style="background: transparent;height: 50px" ng-click="handleSignIn($event)">đăng nhập</button>
           </div>
+          <div class="row my-5">
+            <h4>đăng nhập nhanh/đăng ký thành viên bằng tài khoản mạng xã hội</h4>
+          </div>
+          <div class="row my-5">
+            <div class="col-4 offset-1">
+              <button class="px-3" style="background: transparent">facebook</button>
+            </div>
+            <div class="col-4 offset-1">
+              <button class="px-3" style="background: transparent">google</button>
+            </div>
 
-        </div>
-        <div class="row mt-5">
-          <p>có thể đăng nhập = tài khoản google hoặc facebook, nếu chưa có thể đăng ký nhanh</p>
-        </div>
-      </form>
+          </div>
+          <div class="row mt-5">
+            <p>có thể đăng nhập = tài khoản google hoặc facebook, nếu chưa có thể đăng ký nhanh</p>
+          </div>
+        </form>
+      </div>
     </div>
-  </div>
-  <div class="col-lg-6 col-sm-12">
-    <div class="col-6 offset-3">
-      <div class="row my-5">
-        <h2>đăng ký thành viên mới</h2>
-      </div>
-      <div class="row my-5">
-        <p>đăng ký ngay để mua sắm dễ dàng hơn và nhận những ưu đãi đọc quyền dành cho thành viên của innisfree</p>
-      </div>
-      <div class="row ps-3 mt-5">
-        <button style="width: 70%;height:50px;background: transparent">
-          đăng ký
-        </button>
+    <div class="col-lg-6 col-sm-12">
+      <div class="col-6 offset-3">
+        <div class="row my-5">
+          <h2>đăng ký thành viên mới</h2>
+        </div>
+        <div class="row my-5">
+          <p>đăng ký ngay để mua sắm dễ dàng hơn và nhận những ưu đãi đọc quyền dành cho thành viên của innisfree</p>
+        </div>
+        <div class="row ps-3 mt-5">
+          <button style="width: 70%;height:50px;background: transparent">
+            đăng ký
+          </button>
+        </div>
       </div>
     </div>
   </div>
