--- a/pages/cart.html
+++ b/pages/cart.html
@@ -1,4 +1,4 @@
-<div class="row mt-5" ng-controller="cart">
+<div class="row mt-5">
   <div class="row">
 
   </div>
@@ -11,7 +11,7 @@
           </div>
         </div>
         <div class="col-2" style="width: fit-content;">
-          <img src="https://yt3.ggpht.com/ytc/AMLnZu9QEgO_HIc9TG3KB0JkiLFblFuYKsINWjXgGI-eWQ=s68-c-k-c0x00ffffff-no-rj"
+          <img ng-src={{listProducts[item.idpro].img}}
             alt="" style="width: 60px;height: 80px;">
         </div>
         <div class="col-9" style="width: fit-content;">
