--- a/pages/addcategory.html
+++ b/pages/addcategory.html
@@ -1,4 +1,4 @@
-<div ng-controller="addcategory">
+<div>
     <div class="row">
         <p class="text-center">Add product</p>
     </div>
@@ -19,7 +19,7 @@
                 <div class="row my-4">
                     <div class="col-3">Category Name</div>
                     <div class="col-8">
-                        <input class="form-control" style="height: 50px;" placeholder="" ng-model="category.name" />
+                        <input class="form-control" style="height: 50px;" placeholder="" ng-model="categoryname" />
                     </div>
                 </div>
                 <div class="row my-4">
