--- a/html/index.html
+++ b/html/index.html
@@ -51,11 +51,12 @@
                 </div>
             </nav>
             <div class="row mt-3 mb-5">
-                <div class="col-2"><a href="#index">Trang chủ</a></div>
+                <div class="col-2"><a href="#">Trang chủ</a></div>
                 <div class="col-2"><a href="#product">sp</a></div>
                 <div class="col-2"><a href="#storeinfo">Giới thiệu cửa hàng</a></div>
                 <div class="col-2"><a href="#event">sự kiện</a></div>
             </div>
+
             <div ng-view></div>
 
             <!--footer-->
@@ -119,27 +120,29 @@
         </div>
     </div>
 
-
+<script src="../controller/home.js"></script>
 <script src="../controller/addcategory.js"></script>
 <script src="../controller/addproduct.js"></script>
 <script src="../controller/cart.js"></script>
 <script src="../controller/detailproduct.js"></script>
 <script src="../controller/signin.js"></script>
 
+
     <script>
         const rt = angular.module("routing", ["ngRoute", "file-model"])
-
+        rt.controller("Home",Home)
         rt.controller("AddCategory",addcategory)
-        rt.controller("AddProduct", addproduct)
+        rt.controller("AddProduct", AddProduct)
         rt.controller("Cart", cart)
         rt.controller("DetailProduct", detailproduct)
         rt.controller("SignIn", signin)
 
-        rt.config(function ($routeProvider, $locationProvider, $controllerProvider) {
+        rt.config(function ($routeProvider, $locationProvider) {
             $locationProvider.hashPrefix('');
             $routeProvider
-                .when("/index", {
-                    templateUrl: "../pages/index.html"
+                .when("/", {
+                    templateUrl: "../pages/home.html",
+                    controller: "Home"
                 })
                 .when("/detailproduct", {
                     templateUrl: "../pages/detailproduct.html",
