--- a/pages/addproduct.html
+++ b/pages/addproduct.html
@@ -1,4 +1,4 @@
-<div ng-controller="addproduct">
+<div>
   <div class="row">
     <p class="text-center">Add product</p>
   </div>
@@ -8,10 +8,10 @@
         <h3>admin</h3>
       </div>
       <div class="row mt-5">
-        <h3>product</h3>
+        <a href="#addproduct" style="text-decoration: none; color: black;font-size: 2em;">product</a>
       </div>
       <div class="row mt-5">
-        <h3>category</h3>
+        <a href="#addcategory" style="text-decoration: none; color: black;font-size: 2em;">category</a>
       </div>
     </div>
     <div class="col-8 offset-1">
@@ -19,19 +19,19 @@
         <div class="row my-4">
           <div class="col-3">Product Name</div>
           <div class="col-8">
-            <input class="form-control" style="height: 50px;" placeholder="" ng-model="product.name" />
+            <input class="form-control" style="height: 50px;" placeholder="" ng-model="name" />
           </div>
         </div>
         <div class="row my-4">
           <div class="col-3">Price</div>
           <div class="col-8">
-            <input class="form-control" style="height: 50px;" placeholder="" ng-model="product.price" />
+            <input class="form-control" style="height: 50px;" placeholder="" ng-model="price" />
           </div>
         </div>
         <div class="row my-4">
           <div class="col-3">Category name</div>
           <div class="col-8">
-            <select class="form-select" ng-model="product.category" required>
+            <select class="form-select" ng-model="category" required>
               <option ng-repeat="cate in listCategory" value="{{ cate.id }}">
                 {{ cate.name }}
               </option>
@@ -47,8 +47,7 @@
         </div>
         <div class="row my-4">
           <div class="col-2 offset-10">
-            <button class="p-2" style="background: transparent;color: rgb(34, 59, 8);" ng-click="submit($event)">add
-              product</button>
+            <button class="p-2" style="background: transparent;color: rgb(34, 59, 8);" ng-click="submit($event)">addproduct</button>
           </div>
         </div>
       </form>
