--- a/pages/detailproduct.html
+++ b/pages/detailproduct.html
@@ -1,18 +1,4 @@
-<div ng-controller="detailproduct">
-  <div class="row mt-3 mb-5">
-    <div class="col-2">
-      <h4>Trang chủ</h4>
-    </div>
-    <div class="col-2">
-      <h4>Sản phẩm</h4>
-    </div>
-    <div class="col-2">
-      <h4>Giới thiệu cửa hàng</h4>
-    </div>
-    <div class="col-2">
-      <h4>sự kiện</h4>
-    </div>
-  </div>
+<div>
   <div class="row">
     <div class="col">
       <div class="row">
