--- a/pages/detailproduct.html
+++ b/pages/detailproduct.html
@@ -1,4 +1,41 @@
 <div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid row" style="justify-content: space-between">
+      <h1 class="col-2" href="#">Innisfree</h1>
+      <form class="d-flex col-3" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+
+      <div class="col-4"></div>
+      <div class="collapse navbar-collapse col-3 navbar-end" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0 row">
+          <li class="nav-item col-4">
+            <a href="#sign" class="header-link">đăng nhập</a>
+          </li>
+          <li class="nav-item col-4">
+            <a class="header-link" href="#">trang của tôi</a>
+          </li>
+          <li class="nav-item col-4">
+            <a href="#cart" class="header-link">giỏ hàng</a>
+          </li>
+        </ul>
+      </div>
+      <button class="navbar-toggler col-1" type="button" data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+        aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </nav>
+  <div class="row mt-3 mb-5">
+    <div class="col-2"><a href="#" class="header-link">Trang chủ</a></div>
+    <div class="col-2"><a href="#product" class="header-link">sp</a></div>
+    <div class="col-2"><a href="#storeinfo" class="header-link">Giới thiệu cửa hàng</a></div>
+    <div class="col-2"><a href="#event" class="header-link">sự kiện</a></div>
+  </div>
+
+  <!-- content -->
   <div class="row">
     <div class="col">
       <div class="row">
@@ -17,17 +54,80 @@
         <h1>{{listProducts[index-1].name}}</h1>
       </div>
       <div class="row">
-        <p>chỗ này lười chưa cho thêm description vào api để lấy ra</p>
+        <p>{{listProducts[index-1].description}}</p>
       </div>
-      <div class="row" style="justify-content: center;">
-        <input type="number" ng-model="quantity" style="width: 5em;">
+      <div class="row">
+        <div class="col-4">nhập số lượng sản phẩm:</div>
+        <div class="col-3"><input type="number" ng-model="quantity" style="width: 100%;"></div>
       </div>
-      <div class="row" style="justify-content: center;">
-        <div class="col-4"><button ng-click="handleAdd($event)">thêm vào giỏ hàng</button></div>
+      <div class="row">
+        <h1>{{listProducts[index-1].price}}</h1>
+      </div>
+      <div class="row">
+        <div class="col-6"><button style="width: 100%;height: 3em;background-color: #194037;color: aliceblue;"
+            ng-click="handleAdd($event)">thêm vào giỏ hàng</button></div>
       </div>
     </div>
   </div>
   <div class="row mt-5" style="display: flex;justify-content: space-between">
 
+  </div>
+  <!-- footer -->
+  <div class="footerx">
+    <div class="the-real-footer">
+      <div class="row footer-first-row">
+        <div class="col-8" style="text-align: start">
+          <div class="row">
+            <h1 style="color: white">innisfree</h1>
+          </div>
+          <div class="row mt-5">
+            <div class="col-1">
+              <button class="footer-button">a</button>
+            </div>
+            <div class="col-1">
+              <button class="footer-button">a</button>
+            </div>
+            <div class="col-1">
+              <button class="footer-button">a</button>
+            </div>
+            <div class="col-1">
+              <button class="footer-button">a</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-4" style="text-align: end;padding: 4% 0">
+          <div class="row">
+            <div class="col-2"><button class="footer-button">a</button></div>
+            <div class="col-10">
+              <div class="row footer-button-text">2020 innisfree Inc.</div>
+              <div class="row footer-button-text">All rights reserved.</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="row">
+          <div class="col-2" style="width: fit-content"><a class="footer-button-text">Chính sách giao
+              hàng
+              và thanh toán</a></div>
+          <div class="col-2" style="width: fit-content"><a class="footer-button-text">Chính sách bảo
+              mật
+              thông tin khách hàng</a></div>
+          <div class="col-2" style="width: fit-content"><a class="footer-button-text">Chính sách mua
+              hàng</a></div>
+          <div class="col-2" style="width: fit-content"><a class="footer-button-text">Chính sách trả
+              hàng</a></div>
+        </div>
+        <div class="row">
+          <p class="footer-button-text">thời gian làm việc: Thứ 2 đến thứ 7 hàng tuần</p>
+          <p class="footer-button-text">Tự vấn và chăm sóc khách hàng: 129310923890182390 (Ext 125)
+          </p>
+          <p class="footer-button-text">Email: cs_vn@tinhte.innisfree.com</p>
+        </div>
+      </div>
+      <div class="row">
+
+      </div>
+    </div>
   </div>
 </div>
